#
# $Id: Makefile.am,v 1.11 2007/09/01 12:40:38 richter Exp $
#
#***********************************************************************
#
# FeeServer project
# Copyright (c) 2005
#
# This file is property of and copyright by the Experimental Nuclear 
# Physics Group, Dep. of Physics and Technology
# University of Bergen, Norway, 2004
# This file has been written by Matthias Richter,
# Matthias.Richter@ift.uib.no
#
# Permission to use, copy, modify and distribute this software and its  
# documentation strictly for non-commercial purposes is hereby granted  
# without fee, provided that the above copyright notice appears in all  
# copies and that both the copyright notice and this permission notice  
# appear in the supporting documentation. The authors make no claims    
# about the suitability of this software for any purpose. It is         
# provided "as is" without express or implied warranty.                 
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free
# Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
# MA 02111-1307  USA  
#
#***********************************************************************/

EXTRA_DIST		= mainpage.c

DISTCLEANFILES		= doxy.log $(PACKAGE).tags
if HAVE_DOXYGEN
HTML			= html/index.html 
TAGS			= $(PACKAGE).tags
else 
HTML			=
TAGS			= 
endif

DOCSOURCES		= $(top_srcdir)/feeserver/src_ce/ce_command.c		\
			  $(top_srcdir)/feeserver/src_ce/rcu_issue.cpp		\
			  $(top_srcdir)/feeserver/src_ce/statemachine.cpp 	\
			  $(top_srcdir)/feeserver/src_ce/device.cpp 		\
			  $(top_srcdir)/feeserver/src_ce/dimdevice.cpp		\
			  $(top_srcdir)/feeserver/src_ce/RCU_ControlEngine.cpp	\
			  $(top_srcdir)/feeserver/src_ce/dev_rcu.cpp 		\
			  $(top_srcdir)/feeserver/src_ce/threadmanager.cpp 	\
			  $(top_srcdir)/feeserver/src_ce/rcu_service.cpp 	\
			  $(top_srcdir)/feeserver/src_ce/ce_base.cpp

DOCHEADERS		= $(top_srcdir)/feeserver/src_ce/ce_command.h 		\
			  $(top_srcdir)/feeserver/src_ce/codebook_rcu.h 	\
			  $(top_srcdir)/feeserver/src_ce/rcu_issue.h 		\
			  $(top_srcdir)/feeserver/src_ce/statemachine.hpp 	\
			  $(top_srcdir)/feeserver/src_ce/device.hpp 		\
			  $(top_srcdir)/feeserver/src_ce/dimdevice.hpp		\
			  $(top_srcdir)/feeserver/src_ce/controlengine.hpp 	\
			  $(top_srcdir)/feeserver/src_ce/issuehandler.hpp 	\
			  $(top_srcdir)/feeserver/src_ce/RCU_ControlEngine.hpp 	\
			  $(top_srcdir)/feeserver/src_ce/dev_rcu.hpp 		\
			  $(top_srcdir)/feeserver/src_ce/dev_actel.hpp 		\
			  $(top_srcdir)/feeserver/src_ce/dev_fec.hpp 		\
			  $(top_srcdir)/feeserver/src_ce/dev_msgbuffer.hpp 	\
			  $(top_srcdir)/feeserver/src_ce/threadmanager.hpp 	\
			  $(top_srcdir)/feeserver/src_ce/rcu_service.h		\
			  $(top_srcdir)/feeserver/src_ce/ce_base.h		\
			  $(top_srcdir)/feeserver/src_ce/ce_tpc.h		\
			  $(top_srcdir)/feeserver/src_ce/ce_phos.h		\
			  $(top_srcdir)/feeserver/src_ce/ce_fmd.hpp		\
			  $(top_srcdir)/feeserver/src_trd/ce_trd.hpp

%.png:%.fig
	fig2dev -Lpng $< 

all-local:$(HTML)


clean-local: 
	rm -rf *~ html latex man readme.c

readme.c: @top_srcdir@/README
	@cat $< | sed -e '/^=/s|=||g' -e '/^-/s|-||g'                     | \
	sed -e '/^[0-9]. /s|^\([0-9]*\)\.|@section readme_\1 |'           | \
	sed -e '/^[0-9]*.[0-9] /s|^\([0-9]*\)\.\([0-9]*\)|@subsection readme_\1_\2 |' | \
	sed -e '/^  [-()a-zA-Z0-9.]/s|\(.*\)|<tt>  \1</tt><br>|'          | \
	sed -e 's|\!\!\!\!|<b>|' -e 's|\!\!\!|</b>|'                      > $@_work
	@echo '/** @file readme.c'                                        > $@
	@echo '    @author Matthias Richter'                             >> $@
	@echo '    @brief  autogenerated from README.'                   >> $@
	@echo '    @see  @ref readme                  */'                >> $@
	@echo '/** '                                                     >> $@
	@echo '    @page readme README'                                  >> $@
	@echo '    @section readme_toc TOC'                              >> $@
	@(for i in `cat $@_work | sed -e /@section/!d | cut -d ' ' -f 2` ; do \
	  echo "- @ref $$i" ; \
	done )                                                           >> $@
	@echo                                                            >> $@
	@cat $@_work                                                     >> $@
	@echo '*/'                                                       >> $@
	@rm $@_work

html/index.html $(PACKAGE).tags: doxygen.conf mainpage.c readme.c $(DOCHEADERS)
	$(DOXYGEN) $<  
	for i in `find @srcdir@ -name '*.png'`; do cp -f $$i html/pic_`basename $$i`; done

tar-ball:$(HTML)
	if test -f html/index.html ; then \
	  mv html $(PACKAGE) ;	\
	  tar -czvf ../$(PACKAGE)-$(VERSION)-doc.tar.gz $(PACKAGE) ; \
	  mv $(PACKAGE) html ; fi 


#
# EOF
#
