# $Id: Makefile.am,v 1.8 2007/06/15 15:01:49 richter Exp $
# Makefile template for the FeeServer with RCU support

MODULE			= feeserver

AM_CPPFLAGS		= -I$(srcdir)/src			\
			  -I$(srcdir)/src_ce			\
			  -I$(srcdir)/src_trd			\
			  -I$(srcdir)/dcscMsgBufferInterface    \
			  -I$(srcdir)/dcscMsgBufferInterface/driver_include	

bin_PROGRAMS		=  feeserver
noinst_HEADERS		= 

feeserver_SOURCES	= 
feeserver_LDADD		=
feeserver_LDFLAGS	=
feeserver_CFLAGS	=

# the executable for the ARM precessor should be static
# unless the shared libraries are enabled at configure
# time (the check in configure is currently missing, always
# static)
if ARM_COMPILING
#ARM_COMPILING_LD_FLAGS	=  -all-static
endif
if NEED_DIM
DIM_LD_ADD		=  $(top_builddir)/dim/libdim.la
DIM_CPP_FLAGS     	=  -I$(top_srcdir)/dim
else
DIM_LD_ADD		=  -ldim $(THREAD_LIB)
endif
feeserver_LDFLAGS	+= $(ARM_COMPILING_LD_FLAGS)
feeserver_LDADD		+= $(DIM_LD_ADD)
AM_CPPFLAGS     	+= $(DIM_CPP_FLAGS)

EXTRA_DIST		= README_v0.6.txt	\
			  README_v0.7.txt	\
			  README_v0.8.txt	\
			  src/Makefile		\
			  src_ce/Makefile

SUBDIRS			=

# core sources
include src/Makefile		    
# ControlEngine sources
include src_ce/Makefile		    
# TRD ControlEngine sources
include src_trd/Makefile		    

#if EN_RCU
# rcu specific, later to be deactivated
# Message Buffer interface
SUBDIRS			+= dcscMsgBufferInterface
feeserver_LDADD		+= dcscMsgBufferInterface/dcscMsgBufferInterface.lo
#endif

# automatic generation of data and time of library build
COMPILE_INFO			=  feeserverCompileInfo.cxx

nodist_feeserver_SOURCES	=  $(COMPILE_INFO)

CLEANFILES			=  $(COMPILE_INFO)

#
# EOF
#

$(COMPILE_INFO): $(feeserver_SOURCES) $(pkginclude_HEADERS) $(noinst_HEADERS) Makefile.am
	@echo '//automatically generated compilation info' > $@
	@echo '//!!! DO NOT EDIT THIS FILE !!!' >> $@
	@echo '//add changes in Makefile.am' >> $@
	@echo 'extern "C" void $(MODULE)CompileInfo( char** date, char** time)' >> $@
	@echo '{if (date) *date=__DATE__; if (time) *time=__TIME__; return;}' >> $@
