#
#
#
EXTRA_DIST		= ce_disable_print		\
			  ce_print_24 ce_print_32 	\
			  ce_disable_updt 		\
			  ce_relax_cmdchk 		\
			  ce_sglwrt_on 			\
			  dcsc_en_pmb 			\
			  dcsc_dis_pmb 			\
			  dcsc_en_prb dcsc_dis_prb 	\
			  rcu_instmem_test 		\
			  rcu_read_inst_64 		\
			  rcu_patmem16_test 		\
			  rcu_read_pat_24 		\
			  phos_fec01_apd02_20 		\
			  rcu_read_result_64 		\
			  rcu_resmem_test 		\
			  rcu_blckread_123-7000 	\
			  rcu_blckwrt_123-7000 		\
			  rcu_afl_0x0000                \
			  rcu_afl_0x0001 		\
			  ce_logall 			\
			  ce_logerror 			\
			  ce_loginfo 			\
			  ce_logwarning 		\
			  ce_exec_ls	 		\
			  README

#
# EOF
#
